--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.31.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@splinetool/react-spline": "^4.1.0",
+    "@supabase/supabase-js": "^2.86.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
+    "docx": "^9.5.1",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "pdfjs-dist": "^5.4.449",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-pdftotext": "^1.3.4",
+    "react-to-print": "^3.2.0",
+    "reactflow": "11.11.4",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
-    "@google/genai": "^1.31.0",
-    "reactflow": "11.11.4"
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
